# backtests

./: README.md  backtests.cabal  backtests.hs  gspc.csv  vix.csv
